# Go2Py

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  Dockerfile.dock  Dockerfile.nav2  Dockerfile.robot  MANIFEST.in  Makefile  README.md  dds_test.ipynb  go2py.sh  nav2_docker_run.sh  pin_model.ipynb  req.py  rl_environment.yml  setup.cfg  setup.py
Go2Py/: .idlpy_manifest  (+7 more)
deploy/ros2_nodes/sportmode_nav2/: CMakeLists.txt  package.xml
deploy/ros2_nodes/sportmode_nav2/launch/: cbf_navigation_launch.py  localization.launch.py  localization_async.launch.py  mapping.launch.py  mapping_async.launch.py  navigation.launch.py  navigation_launch.py  ros_ekf.launch.py
deploy/ros2_nodes/sportmode_nav2/params/: localization_async.yaml  mapper_params_online_async.yaml  mapping_async.yaml  nav2_params.old.yaml  nav2_params.yaml  navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml  ros_ekf.yaml
locomotion/: CMakeLists.txt  compile.sh  setup_libraries.sh
locomotion/custom/include/: Executor.hpp  memory_types.hpp  mjsim_helper.hpp  mjsim_helper_ros.hpp  utils.hpp
locomotion/custom/include/Controller/: Controller.hpp  DistributedIDC.hpp
locomotion/custom/include/Planner/: FootSwingTrajectory.h  Gait.hpp  Interpolation.h  Planner.hpp  ReactivePlanner.hpp  cTypes.h  cppTypes.h
locomotion/src/communication/: CMakeLists.txt
locomotion/src/communication/include/: CommunicationManager.hpp  QuadDDSComm.hpp  QuadROSComm.hpp  SHM.hpp  dds_publisher.hpp  dds_subscriber.hpp
locomotion/src/communication/msgs/: Imu.cpp  Imu.hpp  make_msgs.sh
locomotion/src/communication/msgs/cxx/: HelloWorldData.cpp  HelloWorldData.hpp  Imu.c  Imu.h  LowCmd.c  LowCmd.cpp  LowCmd.h  LowCmd.hpp  LowState.c  LowState.cpp  LowState.h  LowState.hpp
locomotion/src/communication/msgs/idl/: Go2pyLowCmd.idl  Go2pyLowState.idl  HelloWorldData.idl  Imu.idl  LowCmd.idl  LowState.idl
locomotion/src/communication/src/: CommunicationManager.cpp  QuadDDSComm.cpp  QuadROSComm.cpp  SHM.cpp
locomotion/src/communication/tests/: publisher.cpp  subscriber.cpp  test_dds_comm.cpp  test_ros_comm.cpp
locomotion/src/dynamics/: CMakeLists.txt  README.md
locomotion/src/dynamics/include/: kinodynamics.hpp
locomotion/src/dynamics/src/: kinodynamics.cpp  test_kinodynamics.cpp
locomotion/src/dynamics/tests/: profile_dynamics.cpp
locomotion/src/execution/: CMakeLists.txt
locomotion/src/execution/include/: ExecutePolicy.hpp  Executor.hpp  ExecutorSHM.hpp
locomotion/src/execution/include/Controller/: Controller.hpp
locomotion/src/execution/include/Estimator/: Estimator.hpp  QuadEstimator.hpp
locomotion/src/execution/include/Planner/: Gait.hpp  Planner.hpp  ReactivePlanner.hpp
locomotion/src/execution/src/: ExecutePolicy.cpp  Executor.cpp  ExecutorSHM.cpp  QuadROSComm.py  execute.cpp  execute_shm.cpp  policy_execute.py
locomotion/src/execution/src/Controller/: Controller.cpp  DistributedIDC.cpp
locomotion/src/execution/src/Estimator/: Estimator.cpp  QuadEstimator.cpp
locomotion/src/execution/src/Planner/: FootSwingTrajectory.cpp  Gait.cpp  Planner.cpp  ReactivePlanner.cpp
locomotion/src/miscelleneous/: rag_basic.py  rag_controller.py
locomotion/src/robot_simulation/: CMakeLists.txt
locomotion/src/robot_simulation/include/: MJSim.hpp  mjsim_helper.hpp  mjsim_helper_ros.hpp  sim_helper.hpp  sim_passive_viewer.hpp
locomotion/src/robot_simulation/include/communication/: CommunicationManager.hpp  QuadROSComm.hpp
locomotion/src/robot_simulation/include/utils/: memory_types.hpp
locomotion/src/robot_simulation/robots/: b1_dae_to_stl_decimation.blend1  convert_stl_to_obj.py
locomotion/src/robot_simulation/robots/b1_description/mujoco/: b1.xml  scene.xml
locomotion/src/robot_simulation/robots/b1_description/urdf/: b1_description_mj.urdf
locomotion/src/robot_simulation/robots/go2_description/meshes/: calf_mirror.stl  foot.stl  hip.stl  thigh_mirror.stl
locomotion/src/robot_simulation/robots/go2_description/mujoco/: go2.xml  go2_gen.xml
locomotion/src/robot_simulation/robots/go2_description/xacro/: gazebo.xacro
locomotion/src/robot_simulation/robots/m2_description/: package.xml
locomotion/src/robot_simulation/robots/m2_description/config/: joint_names_SVAN_URDF4.yaml
locomotion/src/robot_simulation/robots/m2_description/meshes/: Empty_Link2.STL  Empty_Link4.STL  LF_HIP.STL  LF_SHANK.STL  LF_THIGH.STL  LH_HIP.STL  LH_SHANK.STL  LH_THIGH.STL  RF_HIP.STL  RF_SHANK.STL  RF_THIGH.STL  RH_HIP.STL  RH_THIGH.STL
locomotion/src/robot_simulation/robots/m2_description/mujoco/: m2.xml  m2_model.xml  scene.xml
locomotion/src/robot_simulation/robots/m2_description/xacro/: const.xacro
locomotion/src/robot_simulation/src/: MJSim.cpp  main.cpp  main_ros.cpp  quad_simulate.cc  sim_main.cpp  sim_passive_viewer.cpp  test_shm.cpp
locomotion/src/robot_simulation/src/communication/: CommunicationManager.cpp  QuadROSComm.cpp  SHM.cpp
locomotion/src/robots/: LICENSE  b1_dae_to_stl_decimation.blend  b1_dae_to_stl_decimation.blend1  convert_dae_to_stl_decimate.py
locomotion/src/robots/b1_description/meshes/: calf.stl  hip.stl  thigh.stl  thigh_mirror.stl  trunk.stl
locomotion/src/robots/b1_description/mujoco/: b1_mjgen.xml
locomotion/src/robots/go2_description/meshes/: base.stl  calf.stl  thigh.stl  trunk.stl
locomotion/src/robots/go2_description/mujoco/: go2.xml
locomotion/src/robots/go2_description/urdf/: go2_description2.urdf
locomotion/src/robots/go2_description/xacro/: leg.xacro
locomotion/src/robots/m2_description/: CMakeLists.txt
locomotion/src/robots/m2_description/config/: joint_names_SVANM2_URDF.yaml
locomotion/src/robots/m2_description/launch/: display.launch  gazebo.launch
locomotion/src/robots/m2_description/meshes/: BASE.STL  Empty_Link1.STL  Empty_Link3.STL  RH_SHANK.STL
locomotion/src/robots/m2_description/urdf/: SVANM2_URDF.csv  m2_description.urdf  m2_description2.urdf  svanM2.csv
locomotion/src/utils/: CMakeLists.txt
locomotion/src/utils/include/: timer.hpp
locomotion/src/utils/plot_profiles/: mjsim_data_layout.xml
(+823 files in other folders)
