[metadata]
name = Go2Py
version = 1.0.0
description = A Python interface and simulation environemtn for the Unitree Go2 robot. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Rooholla-KhorramBakht/Go2Py
author = Rooholla Khorrambakht, Bolun Dai
author_email = rk4342@nyu.edu, bd1555@nyu.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True
install_requires =
    pygame
    pyyaml
    # pynput 
#    pin
#    mujoco
    # cyclonedds
